<resources>
    <string name="app_name">Notely</string>
    <string name="notely_title">Notely</string>
    <string name="user_nav">User Info</string>
    <string name="cam_nav">Camera</string>
    <string name="file_nav">Files</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome to Notely!</string>
    <string name="sign_in_google">Sign in with Google to register for Notely</string>
    <string name="sign_out">Sign Out</string>
    <string name="linked_acct_msg">Your Notely account is linked with:</string>
    <string name="files_stored_msg">Images store with Notely:</string>
    <string name="total_size_msg">Total data stored with Notely:</string>
    <string name="choose_btn">Choose</string>
    <string name="upload_btn">Upload</string>
    <string name="crop_button">Crop</string>
    <string name="take_photo">Take a photo</string>
    <string name="pick_photo">Pick a photo</string>
</resources>
